<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:padding="5dp"
    android:layout_gravity="center">
    <TextView
        android:id="@+id/closeTeamInfoDialog"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:textColor="@color/textcolordialog"
        android:text="X"
        android:textStyle="bold"
        android:layout_gravity="end"
        android:gravity="center"
        android:background="@drawable/cerclebackground"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="@string/matches_played"
            android:textColor="@color/textcolordialog"
            />
        <TextView
            android:id="@+id/info_played"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text=""
            android:textColor="@color/textcolordialog"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="@string/matches_won"
            android:textColor="@color/textcolordialog"
            />
        <TextView
            android:id="@+id/info_won"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text=""
            android:textColor="@color/textcolordialog"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="@string/matches_lost"
            android:textColor="@color/textcolordialog"
            />
        <TextView
            android:id="@+id/info_lost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text=""
            android:textColor="@color/textcolordialog"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="@string/points_scored"
            android:textColor="@color/textcolordialog"
            />
        <TextView
            android:id="@+id/info_scored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text=""
            android:textColor="@color/textcolordialog"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="@string/points_conceded"
            android:textColor="@color/textcolordialog"
            />
        <TextView
            android:id="@+id/info_conceded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text=""
            android:textColor="@color/textcolordialog"
            />
    </LinearLayout>
</LinearLayout>