<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="6dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:background="?android:attr/selectableItemBackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/dateTrip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        android:text="Date"
                        android:textSize="15sp"/>

                    <TextView
                        android:id="@+id/heureTrip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="Heure"
                        android:textSize="15sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingVertical="10dp">

                    <TextView
                        android:id="@+id/homeTrip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Home"
                        android:textStyle="bold"
                        android:layout_weight="5"
                        android:textSize="20sp"
                        android:gravity="center"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="VS"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:gravity="center"
                        android:layout_weight="1"
                        />
                    <TextView
                        android:id="@+id/awayTrip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Away"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:layout_weight="5"
                        android:gravity="center"
                        />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/trip_info_location_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:textSize="18dp"
                    android:layout_marginEnd="10dp"
                    />

                <TextView
                    android:id="@+id/trip_info_location"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="Info loc"
                    android:textSize="18dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/trip_info_depart_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/departure"
                    android:textSize="18dp"
                    android:layout_marginEnd="10dp"
                    />
                <TextView
                    android:id="@+id/trip_info_depart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Info départ"
                    android:textSize="18dp"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/trip_info_return_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/retour"
                    android:textSize="18dp"
                    android:layout_marginEnd="10dp"
                    />
                <TextView
                    android:id="@+id/trip_info_return"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Info retour"
                    android:textSize="18dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/trip_info_hotel_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hostel"
                    android:textSize="18dp"
                    android:layout_marginEnd="10dp"
                    />
                <TextView
                    android:id="@+id/trip_info_hotel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Info hotel"
                    android:textSize="18dp"
                    />
            </LinearLayout>
            <Button
                android:id="@+id/btnDeleteReserv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/buttonstyle_black"/>
        </LinearLayout>

    </LinearLayout>


</android.support.v7.widget.CardView>